fix network details stake theme on mobile

--- a/ui/src/assets/stylesheets/application/_bridge.scss
+++ b/ui/src/assets/stylesheets/application/_bridge.scss
@@ -556,7 +556,7 @@
                 height: 300px;
             }
             @media screen and (max-width: 600px) {
-                height: 250px;
+                height: $network-details-body-mobile-height;
             }
 
             .details-data-container {
